@@ -93,6 +93,9 @@ network:
 {%- endfor %}
       parameters:
         mode: {{ mode_map[interface.bondmode] }}
+{%- if interface.bondmode in [2, 4, 5] %}
+        transmit-hash-policy: {{ interface.bondtransmithashpolicy }}
+{%- endif %}
 {%- if interface.bondprimary | length > 0 %}
         primary: {{ interface.bondprimary }}
         primary-reselect-policy: {{ primary_reselect_policy }}
